When a user purchase an ERC20 from the Token contract

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./scripts", "./tests", "./typechain"],
+  "include": ["./scripts", "./tests", "./typechain-types"],
   "files": ["./hardhat.config.ts"],
   "compilerOptions": {
     "target": "es2020",
